Modificaciones de estilo
- Arreglado el valor para que colapse la barra de navegación
- Agregados elementos en la plantilla, como el contextPath

--- a/WebContent/recursos/css/estilo_general.css
+++ b/WebContent/recursos/css/estilo_general.css
@@ -1,6 +1,8 @@
 .contenido{
 	width:90%;
+	margin: 0 auto;
 }
+
 
 .encabezado{
 	color:yellow;
@@ -36,5 +38,9 @@
     background-size: cover;
     margin:0 0;
     vertical-align:middle;
+}
+
+.logo:hover{
+	cursor:pointer;
 }
 
